@@ -33,15 +33,15 @@ public class DecimalValueConverterTest {
     public void testGetIpsValue() {
         MessageList ml = new MessageList();
         DecimalValueConverter converter = new DecimalValueConverter();
-        String value = converter.getIpsValue(new Long(1234), ml);
+        String value = converter.getIpsValue(Long.valueOf(1234), ml);
         assertTrue(Datatype.DECIMAL.isParsable(value));
         assertTrue(ml.isEmpty());
 
-        value = converter.getIpsValue(new Long(Long.MAX_VALUE), ml);
+        value = converter.getIpsValue(Long.valueOf(Long.MAX_VALUE), ml);
         assertTrue(Datatype.DECIMAL.isParsable(value));
         assertTrue(ml.isEmpty());
 
-        value = converter.getIpsValue(new Long(Long.MIN_VALUE), ml);
+        value = converter.getIpsValue(Long.valueOf(Long.MIN_VALUE), ml);
         assertTrue(Datatype.DECIMAL.isParsable(value));
         assertTrue(ml.isEmpty());
 
