@@ -92,7 +92,7 @@ class JJTFlParserState {
     }
 
     void openNodeScope(Node n) {
-        marks.push(new Integer(mk));
+        marks.push(Integer.valueOf(mk));
         mk = sp;
         n.jjtOpen();
     }
